# Tar02-Algoritmos-Geneticos

./: INSTRUCCIONES.txt  analisis_estadistico.py  cart_pole_v1.py  pyproject.toml
