[tool.poetry]
name = "tar02-algoritmos-geneticos"
version = "0.1.0"
description = ""
authors = ["JersonPQ <prendes.2507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["classic-control"], version = "^1.2.0"}
matplotlib = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
